
== MediaWiki 1.19 ==

THIS IS NOT A RELEASE YET

MediaWiki 1.19 is an alpha-quality branch and is not recommended for use in
production.

=== Configuration changes in 1.19 ===

=== New features in 1.19 ===
* (bug 19838) Possibility to get all interwiki prefixes if the interwiki
  cache is used.

=== Bug fixes in 1.19 ===

=== API changes in 1.19 ===
* (bug 19838) siprop=interwikimap can now use the interwiki cache.

=== Languages updated in 1.19 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.


=== Other changes in 1.19 ===

== Compatibility ==

MediaWiki 1.19 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for IBM
DB2 and Microsoft SQL Server.

The supported versions are:

* MySQL 4.0 or later
* PostgreSQL 8.3 or later
* SQLite 3
* Oracle 9.0.1 or later

== Upgrading ==

1.19 has several database changes since 1.18, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons
repository, make sure that it is updated as well. Otherwise, errors may arise
due to database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.

For notes on 1.15.x and older releases, see HISTORY.

== Online documentation ==

Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except